--- a/food_delivery/index.html
+++ b/food_delivery/index.html
@@ -27,7 +27,8 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" href="icon_food_delivery.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="icon_food_delivery.png"/>
 
   <title>delivery_food_app</title>
   <link rel="manifest" href="manifest.json">
@@ -37,7 +38,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '567426367';
+    var serviceWorkerVersion = '3481994772';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
