--- a/cimadde/index.html
+++ b/cimadde/index.html
@@ -27,14 +27,15 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/x-icon" href="Favicon1.ico"/>
+  <link rel="icon" href="Favicon1.ico" type="image/x-icon">
 
   <title>web_cimadde</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2658029134';
+    var serviceWorkerVersion = '3247440271';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
