--- a/cimadde/index.html
+++ b/cimadde/index.html
@@ -35,10 +35,11 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '447245658';
+    var serviceWorkerVersion = '2349837682';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbmfLGTwaBNoYq8iqnatcOZXyPhJo7dRY"></script>
 </head>
 <body>
   <script>
